[tool.poetry]
name = "currency_converter"
version = "0.1.0"
description = "hello world!"
authors = ["Andrey"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
celery = "^4.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
